[package]
name = "video"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
mtpng = "0.3.5"
resize = "0.7.4"
rgb = "0.8.34"
screenshots = {version = "0.4.5", path = "screenshots"}

[workspace]
members = ["screenshots"]
